Added background image, fixed footer

--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
-          <input type="search" placeholder="Enter a city" required />
-          <input type="submit" value="Search" />
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city"
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
       <main>
@@ -32,7 +37,16 @@
       </main>
 
       <footer>
-        Coded by Marinah Rahmat, open-sourced on GitHub, and hosted on Netlify.
+        Coded by
+        <a href="https://github.com/mrnh935" target="_blank"> Marinah Rahmat</a
+        >, open-sourced on
+        <a href="hhttps://github.com/mrnh935/whats-the-weather" target="_blank"
+          >GitHub</a
+        >
+        and hosted on
+        <a href="https://heywhatstheweathertoday.netlify.app/" target="_blank"
+          >Netlify</a
+        >
       </footer>
     </div>
   </body>
