Added basic CSS

--- a/index.html
+++ b/index.html
@@ -26,27 +26,35 @@
         </form>
       </header>
       <main>
-        <div>
-          <h1>Amsterdam</h1>
-          <p>
-            Sunday 4 February 16:16; scattered clouds <br />
-            Pressure: 1024 Humidity: 96% Wind: 13 mph
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="current-city">Amsterdam</h1>
+            <p class="current-details">
+              Sunday 4 February 16:16; scattered clouds <br />
+              <br />
+              Pressure: <strong>1024</strong> Humidity:
+              <strong>96%</strong> Wind: <strong>13 mph</strong>
+            </p>
+          </div>
+          <div class="current-temperature-container">
+            <div class="current-temperature-icon">🌞</div>
+            <div class="current-temperature">3</div>
+            <div class="current-temperature-unit">°C</div>
+          </div>
         </div>
-        <div>3°C</div>
       </main>
 
       <footer>
         Coded by
         <a href="https://github.com/mrnh935" target="_blank"> Marinah Rahmat</a
         >, open-sourced on
-        <a href="hhttps://github.com/mrnh935/whats-the-weather" target="_blank"
+        <a href="https://github.com/mrnh935/whats-the-weather" target="_blank"
           >GitHub</a
         >
         and hosted on
         <a href="https://heywhatstheweathertoday.netlify.app/" target="_blank"
           >Netlify</a
-        >
+        >.
       </footer>
     </div>
   </body>
