Edited JS and CSS

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
           <div>
             <h1 class="current-city" id="city-name"></h1>
             <p class="current-details">
-              <span id="city-date"></span>
-              <span id="city-time"></span>; scattered clouds<br />
+              <span id="city-date"></span><br />
+              <span class="conditions" id="city-conditions"></span>
+              <br />
               <br />
               <span id="current-details">
                 Pressure: <strong></strong> Humidity: <strong></strong> Wind:
@@ -42,7 +43,7 @@
             </p>
           </div>
           <div class="current-temperature-container">
-            <div class="current-temperature-icon">🌞</div>
+            <div id="icon"></div>
             <div class="current-temperature"><span id="city-temp"></span></div>
             <div class="current-temperature-unit">°C</div>
           </div>
